fix: putting accent and changing contrast of letters

--- a/public/assets/styles/commonStyles.css
+++ b/public/assets/styles/commonStyles.css
@@ -35,7 +35,18 @@ body {
     padding-bottom: 40px;
     font-size: 2vw;
 }
-
+label {
+    font-family: "Inria Sans", sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+label span {
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    text-transform: capitalize;
+}
 /* ------------------------------------ NAV ------------------------------- */
 
 header {
